<resources>
    <string name="app_name"><b>Helping</b></string>
    <string name="app_name1"><b>Hand</b></string>
    <string name="app">Helping Hand</string>
    <string name="logo">Image</string>
    <string name="signup"><u>   Create account?</u></string>
    <string name="login"><b>Login</b></string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications"><b>Configure</b></string>
    <string name="about"><u>About</u></string>
    <string name="add">Add</string>
    <string name="device_id">Device ID</string>
    <string name="found"><b><u>Found devices:</u></b></string>

</resources>

